<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:src="@drawable/gg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="TODO" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="445dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:text="@string/GG"
                android:textColor="@color/ggColor"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:text="@string/summary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:text="@string/plot_overview"
                android:textColor="@color/ggColor"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:text="@string/plot_overview_text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/ending"
                android:textColor="@color/ggColor"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:text="@string/endingText" />


        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>